--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@craco/craco": "^6.2.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tsamantanis/react-glassmorphism": "^1.1.2",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
