--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "moment": "^2.29.1",
     "notistack": "^1.0.10",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^2.3.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
@@ -34,8 +36,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-     "build": "react-scripts build",
-     "test": "react-scripts test",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
