--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-material-ui-carousel": "^2.3.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
