--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tsamantanis/react-glassmorphism": "^1.1.2",
+    "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
+    "material-ui-confirm": "^2.1.3",
     "moment": "^2.29.1",
     "notistack": "^1.0.10",
     "react": "^17.0.2",
+    "react-async-hook": "^3.6.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
@@ -32,6 +35,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "use-constant": "^1.1.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
