--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-async-hook": "^3.6.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-material-ui-carousel": "^2.3.1",
     "react-player": "^2.9.0",
