--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "material-ui-confirm": "^2.1.3",
+    "material-ui-popup-state": "^1.9.3",
     "moment": "^2.29.1",
     "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-async-hook": "^3.6.2",
     "react-circular-progressbar": "^2.0.4",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -37,6 +39,7 @@
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "use-constant": "^1.1.0",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
