--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "material-ui-popup-state": "^1.9.3",
     "moment": "^2.29.1",
     "notistack": "^1.0.10",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-async-hook": "^3.6.2",
     "react-circular-progressbar": "^2.0.4",
